tests/macro_attributes/dim/07-incomplete_eq_comma.stderr
error: Unexpected token. Expected usize literal or generic.
 --> tests/macro_attributes/dim/07-incomplete_eq_comma.rs:3:16
  |
3 | #[lazy_nd(dim =,)]
  |                ^
